--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "plotly.js": "^2.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-plotly.js": "^2.5.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
